...
                                <rect key="frame" x="16" y="605" width="343" height="38"/>
                                <color key="backgroundColor" red="0.30196078431372547" green="0.29411764705882354" blue="0.49803921568627452" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="38" id="fhL-Bp-r0g"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="LET'S START">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
...
                                        <connections>
                                            <outlet property="messageLabel" destination="AH2-PF-jsF" id="Ybp-x1-KaL"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Chat table view"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="Tfr-hL-Jvo" id="sot-jG-FtV"/>
                                    <outlet property="delegate" destination="Tfr-hL-Jvo" id="p0R-OA-xjF"/>
                                </connections>
                            </tableView>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KAZ-In-07D" userLabel="WriteMessageView">
                                <rect key="frame" x="0.0" y="612" width="375" height="55"/>
                                <subviews>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZjQ-kv-OlH">
                                        <rect key="frame" x="8" y="8" width="295" height="39"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" label="Message text view"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                        <connections>
                                            <outlet property="delegate" destination="Tfr-hL-Jvo" id="VAC-cE-4IL"/>
                                        </connections>
                                    </textView>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZvN-Oy-Mtk">
                                        <rect key="frame" x="311" y="8" width="56" height="39"/>
                                        <color key="backgroundColor" red="0.30196078431372547" green="0.29411764705882354" blue="0.49803921568627452" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="56" id="k8p-kk-p8a"/>
                                        </constraints>
                                        <state key="normal" title="Send">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
...
                            <constraint firstItem="Ohx-aZ-uX5" firstAttribute="trailing" secondItem="NMR-tC-wtP" secondAttribute="trailing" id="ry5-fF-kID"/>
                            <constraint firstItem="NMR-tC-wtP" firstAttribute="leading" secondItem="Ohx-aZ-uX5" secondAttribute="leading" id="v8g-H6-UIl"/>
                            <constraint firstItem="NMR-tC-wtP" firstAttribute="top" secondItem="OKe-LE-ph0" secondAttribute="top" id="yrb-E1-jLn"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Ohx-aZ-uX5"/>
                    </view>
                    <navigationItem key="navigationItem" title="Chat Room" id="CiE-qN-EEw"/>
                    <connections>
                        <outlet property="dismissKeyboardView" destination="NMR-tC-wtP" id="RdV-5q-Zmb"/>
                        <outlet property="messageTextView" destination="ZjQ-kv-OlH" id="kcj-Cp-7ei"/>
                        <outlet property="sendButton" destination="ZvN-Oy-Mtk" id="dPI-zV-b2w"/>
                        <outlet property="sendingActivityIndicator" destination="Qxr-bH-jFu" id="DJC-73-QMm"/>
                        <outlet property="tableview" destination="2hc-iV-nRv" id="lU2-Iw-a8e"/>
...
